//
// Copyright (c) Peter Vrenken. All rights reserved. See the license on https://github.com/vrenken/EtAlii.Ubigia
syntax = "proto3";
import "Clients/_Grpc/_Model.proto";
package EtAlii.Ubigia.Api.Transport.Management.Grpc.WireProtocol;

// The Account Grpc service definition.
service AccountGrpcService
{
	rpc GetSingle (AccountSingleRequest) returns (AccountSingleResponse) {}
	rpc GetMultiple (AccountMultipleRequest) returns (stream AccountMultipleResponse) {}
	rpc Post (AccountPostSingleRequest) returns (AccountSingleResponse) {}
	rpc Put (AccountSingleRequest) returns (AccountSingleResponse) {}
	rpc Delete (AccountSingleRequest) returns (AccountSingleResponse) {}
}

message AccountSingleRequest
{
	oneof Selection
	{
		Guid Id = 1;
		string Name = 2;
		Account Account = 3;
	}
}
message AccountPostSingleRequest
{
	Account Account = 1;
	string Template = 2;
}

message AccountMultipleRequest
{
}

message AccountSingleResponse
{
	Account Account = 1;
}

message AccountMultipleResponse
{
	Account Account = 1;
}
